crates/schemas/tests/snapshots/evolution_tests__evolution_populated_telemetry.snap
---
source: crates/schemas/tests/evolution_tests.rs
expression: value
---
{
  "best_lap_time_s": 0.0,
  "brake": 0.10000000149011612,
  "car_id": "ferrari_488",
  "clutch": 0.0,
  "current_lap_time_s": 0.0,
  "delta_ahead_s": 0.0,
  "delta_behind_s": 0.0,
  "engine_temp_c": 0.0,
  "extended": {
    "boost_psi": {
      "type": "Float",
      "value": 12.5
    },
    "is_wet": {
      "type": "Boolean",
      "value": false
    }
  },
  "ffb_scalar": 0.0,
  "ffb_torque_nm": 0.0,
  "flags": {
    "abs_active": false,
    "blue_flag": false,
    "checkered_flag": false,
    "drs_active": false,
    "drs_available": false,
    "engine_limiter": false,
    "ers_active": false,
    "ers_available": false,
    "formation_lap": false,
    "green_flag": true,
    "in_pits": false,
    "launch_control": false,
    "pit_limiter": false,
    "red_flag": false,
    "safety_car": false,
    "session_paused": false,
    "traction_control": false,
    "yellow_flag": false
  },
  "fuel_percent": 0.0,
  "gear": 4,
  "lap": 0,
  "last_lap_time_s": 0.0,
  "lateral_g": 1.5,
  "longitudinal_g": 0.0,
  "max_rpm": 8000.0,
  "num_gears": 0,
  "position": 0,
  "rpm": 6000.0,
  "sequence": 99,
  "slip_angle_fl": 0.0,
  "slip_angle_fr": 0.0,
  "slip_angle_rl": 0.0,
  "slip_angle_rr": 0.0,
  "slip_ratio": 0.0,
  "speed_ms": 50.0,
  "steering_angle": 0.0,
  "throttle": 0.800000011920929,
  "tire_pressures_psi": [
    0.0,
    0.0,
    0.0,
    0.0
  ],
  "tire_temps_c": [
    0,
    0,
    0,
    0
  ],
  "track_id": "monza",
  "vertical_g": 0.0
}
